# otf-api

./: .bumpversion.toml  .codespellrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  LICENSE  LICENSE.txt  README.md  cliff.toml  mkdocs.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  dev.yml  python_package.yml  release.yml  test_and_lint.yml
docs/: conf.py  index.md  installation.md  usage.md
docs/reference/: SUMMARY.md
docs/reference/otf/: api.md  classes_api.md  dna_api.md  index.md  member_api.md  performance_api.md  studio_api.md
docs/reference/otf/models/: auth.md  base.md  index.md
docs/reference/otf_api/: api.md  classes_api.md  dna_api.md  index.md  member_api.md  performance_api.md  studio_api.md
docs/reference/otf_api/models/: auth.md  base.md  index.md
examples/: auth_examples.py  challenge_tracker_examples.py  class_bookings_examples.py  studio_examples.py  workout_examples.py
examples_sync/: challenge_tracker_examples.py  class_bookings_examples.py  studio_examples.py  workout_examples.py
python/: README.md  pyproject.toml  ruff.toml
python/docs/: index.rst
python/docs/_static/: custom.css
python/docs/api/: otf_api.api.bookings.rst  otf_api.api.studios.rst  otf_api.models.studios.rst  otf_api.rst
python/docs/examples/: challenge_tracker_examples.rst  examples_toc.rst
python/examples/: challenge_tracker_examples.py  studio_examples.py  workout_examples.py
python/src/otf_api/auth/: __init__.py  user.py  utils.py
python/src/otf_api/models/: __init__.py  base.py  mixins.py
python/tests/: test_schema_generation.py
schema/: openapi.json
scripts/: gen_ref_pages.py  generate_openapi.py
source/: conf.py  index.md  index.rst  usage.md
source/_templates/: page.html
source/api/: modules.rst  otf_api.api.members.rst  otf_api.api.rst  otf_api.api.workouts.rst  otf_api.models.bookings.rst  otf_api.models.members.rst  otf_api.models.rst  otf_api.models.studios.rst  otf_api.models.workouts.rst  otf_api.rst
source/examples/: challenge_tracker_examples.md  class_bookings_examples.md  class_bookings_examples.rst  studio_examples.md  studio_examples.rst  workout_examples.md  workout_examples.rst
src/otf/: __init__.py  api.py  classes_api.py  dna_api.py  member_api.py  performance_api.py  studio_api.py
src/otf/models/: __init__.py  auth.py  base.py
src/otf/models/responses/: __init__.py  bookings.py  challenge_tracker_content.py  challenge_tracker_detail.py  classes.py  dna_hr_history.py  dna_max_hr.py  dna_telemetry.py  enums.py  favorite_studios.py  latest_agreement.py  member_detail.py  member_membership.py  member_purchases.py  out_of_studio_workout_history.py  performance_summary_detail.py  performance_summary_list.py  studio_detail.py  studio_services.py  total_classes.py  workouts.py
src/otf_api/: __init__.py  api.py  auth.py  cache.py  classes_api.py  dna_api.py  exceptions.py  filters.py  logging.py  member_api.py  performance_api.py  studio_api.py  studios_api.py  sync_api.py  telemetry_api.py  utils.py
src/otf_api/api/: __init__.py  _compat.py  api.py  booking_api.py  client.py  compat.py  member_api.py  studio_api.py  utils.py  workout_api.py
src/otf_api/api/bookings/: booking_api.py  booking_client.py
src/otf_api/api/members/: member_api.py  member_client.py
src/otf_api/api/studios/: __init__.py  studio_api.py  studio_client.py
src/otf_api/api/workouts/: __init__.py  workout_api.py  workout_client.py
src/otf_api/auth/: __init__.py  auth.py  cache.py  config.py  user.py  utils.py
src/otf_api/cli/: __init__.py  _types.py  _utilities.py  app.py  asyncutils.py  bookings.py  classes.py  prompts.py  root.py
src/otf_api/models/: __init__.py  auth.py  base.py  body_composition_list.py  book_class.py  bookings.py  bookings_v2.py  cancel_booking.py  challenge_tracker_content.py  challenge_tracker_detail.py  classes.py  enums.py  favorite_studios.py  latest_agreement.py  lifetime_stats.py  member_detail.py  member_membership.py  member_purchases.py  mixins.py  notifications.py  out_of_studio_workout_history.py  performance_summary.py  performance_summary_detail.py  performance_summary_list.py  ratings.py  studio_detail.py  studio_services.py  telemetry.py  telemetry_hr_history.py  workout.py
src/otf_api/models/bookings/: __init__.py  bookings.py  bookings_v2.py  classes.py  enums.py
src/otf_api/models/members/: __init__.py  member_detail.py  member_membership.py  member_purchases.py
src/otf_api/models/responses/: __init__.py  body_composition_list.py  book_class.py  bookings.py  cancel_booking.py  challenge_tracker_content.py  challenge_tracker_detail.py  classes.py  dna_hr_history.py  dna_max_hr.py  dna_telemetry.py  enums.py  favorite_studios.py  latest_agreement.py  lifetime_stats.py  member_detail.py  member_membership.py  (+12 more)
tests/: conftest.py  test_api.py  test_classes.py  test_filters.py
typescript/: README.md  package.json  tsconfig.json  typedoc.json  vitest.config.ts
typescript/examples/: basic-usage.ts  test-local.js  test-studios.js  test-workouts.js  with-tokens.js
typescript/src/: index.ts  models.ts  otf.ts
typescript/src/api/: bookings.ts  members.ts  studios.ts  workouts.ts
typescript/src/auth/: cognito.ts  device-utils.ts  token-auth.ts
typescript/src/cache/: file-cache.ts  local-storage-cache.ts  memory-cache.ts  types.ts
typescript/src/client/: http-client.ts
typescript/src/errors/: index.ts
typescript/src/types/: config.ts  workout-enums.ts
typescript/test/: otf.test.ts  schema-generation.test.ts  setup.ts
typescript/test/api/: bookings.test.ts  members.test.ts  studios.test.ts  workouts.test.ts
typescript/test/auth/: cognito.test.ts
typescript/test/client/: http-client.test.ts
(+71 files in other folders)
