[project]
name = "otf-api"
version = "0.11.0-rc1"
description = "Python OrangeTheory Fitness API Client"
authors = [{ name = "Jessica Smith", email = "j.smith.git1@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=24.3.0,<25",
    "httpx>=0.27.2",
    "humanize>=4.9.0,<5",
    "inflection==0.5.*",
    "pint==0.24.*",
    "pycognito==2024.5.1",
    "pydantic>=2.7.3",
    "yarl>=1.18.3,<2",
    "tenacity>=9.0.0,<10",
    "cachetools>=5.5.0",
    "pendulum>=3.1.0",
]

[project.urls]
Documentation = "https://otf-api.readthedocs.io/en/stable/"

[dependency-groups]
dev = [
    "build==1.2.1",
    "bump-my-version>=0.23.0,<0.24",
    "mypy==1.10.0",
    "mypy-boto3-cognito-identity>=1.38.0",
    "mypy-boto3-cognito-idp>=1.35.93,<2",
    "pre-commit==3.7.1",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "tox==4.15.1",
    "twine==5.1.1",
]
docs = [
    "griffe<1.0.0",
    "griffe-fieldz==0.1.2",
    "mike==2.1.1",
    "mkdocs==1.6.0",
    "mkdocs-autorefs==1.0.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-include-markdown-plugin==6.2.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.26",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-section-index==0.3.9",
    "mkdocstrings==0.25.1",
    "mkdocstrings-python==1.10.3",
    "pkginfo<1.11",
    "setuptools>=70.0.0,<71",
    "virtualenv>=20.26.2,<21",
]

[tool.uv]
default-groups = ["dev"]


[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
